updated test suite